gac_sb/objects/INNOpersonnelToProjet__c.object
<CustomObject>
    <fields>
        <fullName>Depense_de_personnel__c</fullName>
        <label>Dépense de personnel</label>
        <referenceTo>INNOdepensePersonnel__c</referenceTo>
        <relationshipName>Depenses_de_personnel_to_projets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Heures_RD_option1__c</fullName>
        <label>Heures R&amp;D option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heures_RD_option2__c</fullName>
        <label>Heures R&amp;D option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heures_RD_option3__c</fullName>
        <label>Heures R&amp;D option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportId__c</fullName>
        <label>Id d&apos;import</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Montant_RD_retenu_option1__c</fullName>
        <formula>IF( Depense_de_personnel__r.Actif__c = true, 
  
  IF(ISPICKVAL(Projet__r.Type__c, &apos;normalisation&apos;), 
    ((Depense_de_personnel__r.Salaire_charge_option1__c + Depense_de_personnel__r.Interessement_option1__c + Depense_de_personnel__r.Participation_option1__c) * Heures_RD_option1__c / Depense_de_personnel__r.Total_heures_travaillees_option1__c) * 0.5 * 1.3,
  
    CASE(Depense_de_personnel__r.RecordType.DeveloperName, 
      &apos;jeuneDocteur&apos;, 
      2 * (Depense_de_personnel__r.Salaire_charge_option1__c + Depense_de_personnel__r.Interessement_option1__c + Depense_de_personnel__r.Participation_option1__c) * Heures_RD_option1__c / Depense_de_personnel__r.Total_heures_travaillees_option1__c, 
      &apos;miseDisposition&apos;, 
      Depense_de_personnel__r.Salaire_charge_option1__c * Heures_RD_option1__c / Depense_de_personnel__r.Total_heures_travaillees_option1__c, 
      (Depense_de_personnel__r.Salaire_charge_option1__c + Depense_de_personnel__r.Interessement_option1__c + Depense_de_personnel__r.Participation_option1__c) * Heures_RD_option1__c / Depense_de_personnel__r.Total_heures_travaillees_option1__c
    )
  ) 
, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant R&amp;D retenu option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_RD_retenu_option2__c</fullName>
        <formula>IF( Depense_de_personnel__r.Actif__c = true, 
  
  IF(ISPICKVAL(Projet__r.Type__c, &apos;normalisation&apos;), 
    ((Depense_de_personnel__r.Salaire_charge_option2__c + Depense_de_personnel__r.Interessement_option2__c + Depense_de_personnel__r.Participation_option2__c) * Heures_RD_option2__c / Depense_de_personnel__r.Total_heures_travaillees_option2__c) * 0.5 * 1.3,
  
    CASE(Depense_de_personnel__r.RecordType.DeveloperName, 
      &apos;jeuneDocteur&apos;, 
      2 * (Depense_de_personnel__r.Salaire_charge_option2__c + Depense_de_personnel__r.Interessement_option2__c + Depense_de_personnel__r.Participation_option2__c) * Heures_RD_option2__c / Depense_de_personnel__r.Total_heures_travaillees_option2__c, 
      &apos;miseDisposition&apos;, 
      Depense_de_personnel__r.Salaire_charge_option2__c * Heures_RD_option2__c / Depense_de_personnel__r.Total_heures_travaillees_option2__c, 
      (Depense_de_personnel__r.Salaire_charge_option2__c + Depense_de_personnel__r.Interessement_option2__c + Depense_de_personnel__r.Participation_option2__c) * Heures_RD_option2__c / Depense_de_personnel__r.Total_heures_travaillees_option2__c
    )
  ) 
, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant R&amp;D retenu option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_RD_retenu_option3__c</fullName>
        <formula>IF( Depense_de_personnel__r.Actif__c = true, 
  
  IF(ISPICKVAL(Projet__r.Type__c, &apos;normalisation&apos;), 
    ((Depense_de_personnel__r.Salaire_charge_option3__c + Depense_de_personnel__r.Interessement_option3__c + Depense_de_personnel__r.Participation_option3__c) * Heures_RD_option3__c / Depense_de_personnel__r.Total_heures_travaillees_option3__c) * 0.5 * 1.3,
  
    CASE(Depense_de_personnel__r.RecordType.DeveloperName, 
      &apos;jeuneDocteur&apos;, 
      3 * (Depense_de_personnel__r.Salaire_charge_option3__c + Depense_de_personnel__r.Interessement_option3__c + Depense_de_personnel__r.Participation_option3__c) * Heures_RD_option3__c / Depense_de_personnel__r.Total_heures_travaillees_option3__c, 
      &apos;miseDisposition&apos;, 
      Depense_de_personnel__r.Salaire_charge_option3__c * Heures_RD_option3__c / Depense_de_personnel__r.Total_heures_travaillees_option3__c, 
      (Depense_de_personnel__r.Salaire_charge_option3__c + Depense_de_personnel__r.Interessement_option3__c + Depense_de_personnel__r.Participation_option3__c) * Heures_RD_option3__c / Depense_de_personnel__r.Total_heures_travaillees_option3__c
    )
  ) 
, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant R&amp;D retenu option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nom_salarie__c</fullName>
        <formula>Depense_de_personnel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nom du salarié</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Prod Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Projet__c</fullName>
        <label>Projet</label>
        <referenceTo>INNOprojet__c</referenceTo>
        <relationshipName>Depenses_de_personnel_to_projets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Salarie_actif__c</fullName>
        <formula>IF(Depense_de_personnel__r.Actif__c ,&apos;oui&apos;, &apos;non&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salarié actif</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_enregistrement_du_salarie__c</fullName>
        <formula>Depense_de_personnel__r.Type_enregistrement__c</formula>
        <label>Type d&apos;enregistrement du salarié</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_projet__c</fullName>
        <label>Type du projet</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniteTempsDepensesPersonnel2__c</fullName>
        <label>Unité de temps 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Dépense de personnel to projet</label>
    <nameField>
        <displayFormat>PtP-{000000000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dépenses de personnel to projets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>